[package]
name = "rconfd"
version = "0.8.1"
description = """Generate config files from jsonnet templates and keep them in sync with secrets fetched from a
vault server with kubernetes authentication."""
authors = ["Éric BURGHARD <eric@itsufficient.me>"]
edition = "2018"

[dependencies]
anyhow = "1.0.41"
argh = "0.1.4"
async-std = { version = "1.9.0", features = ["unstable"]}
env_logger = "0.8.4"
futures = "0.3.15"
isahc = { version = "1.4.0", features = ["json"] }
jrsonnet-evaluator = { version = "0.4", features = [] }
jrsonnet-interner = "0.4"
jrsonnet-parser = "0.4"
libc = "0.2.97"
log = "0.4.14"
nom = { version = "6.2.1", optional = true }
serde = "1.0.126"
serde_json = "1.0.64"
sha1 = "0.6.0"
vaultk8s = "0.4.3"

[features]
default = []

[patch.crates-io]
vaultk8s = { git = "https://github.com/eburghar/vaultk8s.git", branch = "master" }
# vaultk8s = { path = "../vaultk8s" }
