[package]
name = "rconfd"
version = "0.11.2"
description = """Generate config files from jsonnet templates and keep them in sync with secrets fetched from a
vault server with kubernetes authentication."""
authors = ["Éric BURGHARD <eric@itsufficient.me>"]
edition = "2018"

[dependencies]
anyhow = "1.0.41"
argh = "0.1.4"
async-std = { version = "1.9.0", features = ["unstable"]}
env_logger = "0.8.4"
futures = "0.3.15"
isahc = { version = "1.5.0", features = ["json"] }
jrsonnet-evaluator = { version = "0.4", features = [] }
jrsonnet-interner = "0.4"
jrsonnet-parser = "0.4"
libc = "0.2.97"
log = "0.4.14"
serde = "1.0.126"
serde_json = "1.0.64"
sha1 = "0.6.0"
thiserror = "1.0.29"
vault-jwt = { version = "0.9.1", features = [] }
# vault-jwt = { version = "0.9.0", features = ["nom"] }

[patch.crates-io]
vault-jwt = { git = "https://github.com/eburghar/vault-jwt.git", tag = "0.9.1" }
# vault-jwt = { path = "../vault-jwt" }
